# zoomate

./: .env  Cargo.toml  README.md  build.rs  secret.txt  secret.txt.config.json  secret.txt.enc  tcp_wallet_secure_cell_config.json  zoomate.spec
canisters/: README.md
canisters/wepn/: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
canisters/wepn/src/wepn_backend/: Cargo.toml
canisters/wepn/src/wepn_backend/src/: lib.rs
canisters/wepn/src/wepn_frontend/src/: index.html  index.js
clients/: README.md
hoopoe/: README.md  hoopoe.spec
hoopoe/src/: apis.rs  app.rs  consts.rs  events.rs  helpers.rs  interfaces.rs  middlewares.rs
hoopoe/src/apis/: http.rs
hoopoe/src/apis/http/: components.rs
hoopoe/src/events/: actors.rs
hoopoe/src/events/actors/: ci.rs  publishers.rs  subscribers.rs  ws.rs
hoopoe/src/events/actors/ci/: deploy.rs  run.rs
hoopoe/src/events/actors/publishers/: notif.rs  user.rs
hoopoe/src/events/actors/subscribers/: notif.rs  user.rs
hoopoe/src/events/actors/ws/sessions/: hoop.rs
hoopoe/src/events/sse/: broadcaster.rs
hoopoe/src/helpers/: config.rs  cry.rs  error0.rs  httpserver.rs  misc.rs
hoopoe/src/interfaces/: passport.rs
hoopoe/src/middlewares/: http.rs
hoopoe/src/middlewares/http/: passport.rs
hoopoedb/: README.md
infra/certs/: README.md
infra/docker/hoopoe/: .Dockerfile
infra/docker/nginx/: .htpasswd  Dockerfile  adminer.zoomate.app.conf  api.hoopoe.zoomate.app.conf  grafana.zoomate.app.conf  nginx.conf  portainer.zoomate.app.conf  zoomate.app.conf
infra/docker/node/: Dockerfile
manit/: Cargo.toml  LICENSE-MIT  README.md  index.html
manit/src/: main.rs
manit/src-tauri/: Cargo.toml  tauri.conf.json
multipartreq/src/: lib.rs
node/: README.md
node/src/: app.rs  helpers.rs  impls.rs  models.rs  zkp.rs
node/src/Lactors/notif/: mod.rs
node/src/grpc/: server.rs
node/src/helpers/: cry.rs  dp.rs  misc.rs  tcpserver.rs
proto/: node.proto
scripts/: backup.sh  redeploy.sh  setup.sh
src/: Lactors.rs  Ractors.rs  acter.rs  bpf.rs  constants.rs  cry.rs  dp.rs  extractor.rs  helpers.rs  lib.rs  misc.rs  node.rs  plugins.rs  raptor.rs  redis4.rs  tcpactor.rs  tcpserver.rs
src/Lactors/notif/: mod.rs
src/Ractors/balancer/: mod.rs
src/grpc/: client.rs  server.rs
src/helpers/: acter.rs  cry.rs  dp.rs  httpserver.rs  raptor.rs  redis4.rs  tcpserver.rs
wallexerr-keys/: ed25519.json
