[package]
name = "zoomate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = {version = "1", features = ["derive"] }
redis = { version = "0.23.0", features = ["tokio-comp", "cluster-async", "json"] }
actix-redis = "0.12.0"
actix = "0.13.0"
actix-cors = "0.6.4"
actix-web = { version = "4", features = ["openssl"] }
actix-web-actors = "4.2.0"
futures = "0.3"
futures-util = "0.3"
rayon = "1"
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
dotenv = "0.15"
pretty_env_logger = "0.4.0"
log4rs = "1.2.0"
tokio-cron-scheduler = "0.9.1"
env_logger = "0.10.0"
bytes = { version = "1", features = ["serde"] }
hex = "0.4"
is_type = "0.2.1"
wasmer = "4.1.1"
wasmer-wasi = "3.1.1"

# ------------------
#    crypto libs
# ------------------
rand = "0.8"
rust-argon2 = "2"
ring = "0.17"
sha2 = "0.10"
themis = "0.14.0"
secp256k1 = { version = "0.28", features = ["rand"] }
tiny-keccak = "2"
rand_chacha = "0.3.1"
chacha20 = "0.9.1"
web3 = "0.19.0"
wallexerr = "0.2.1"
base64 = "0.21.4"
sha3 = "0.10.8"
# ------------------

borsh = "0.10"
once_cell = "1.17.1"
# redbpf = "2.3.0"
hadead = "0.1.5"
redis-async = "0.16.1"

[lib]
# libraries don't have entry points, you can't run them,they're used for functionality sharing like binding a .wasm into js codes
# we need lib.rs and crate type of cdylib for none binary like .wasm, .so, .dylib and .dll files or for tests
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "zoomate"
path = "src/node.rs"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
overflow-checks = true # panic on any overflow
