[package]
name = "zoomate"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ 
  "walletreq",
  "s3req",
  "multipartreq"
]

[dependencies]
walletreq = { path = "walletreq", name = "walletreq"}
s3req = { path = "s3req", name = "s3req"}
multipartreq = { path = "multipartreq", name = "multipartreq" }
async-std = "1"
tokio = { version = "1", features = ["full"] }
serde = {version = "1", features = ["derive"] }
redis = { version = "0.24.0", features = ["tokio-comp", "cluster-async", "json"] }
redis-async = "0.16.1"
actix-redis = "0.13.0"
actix = "0.13"
actix-telepathy = "0.6.0"
actix-web-actors = "4.3"
actix-broker = "0.4.3"
actix-web = { version = "4", features = ["openssl"] }
oauth2 = "4.4.2"
futures = "0.3"
futures-util = "0.3"
rayon = "1"
serde_json = "1"
borsh = "1"
once_cell = "1"
# redbpf = "2.3.0"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
dotenv = "0.15"
pretty_env_logger = "0.4.0"
log4rs = "1.2.0"
tokio-cron-scheduler = "0.9.1"
env_logger = "0.10.0"
bytes = { version = "1", features = ["serde"] }
hex = "0.4"
is_type = "0.2.1"
wasmer = "4"
wasmer-wasi = "3.1.1"
tonic = "0.10.2"
clap = { version = "4.4.8", features = ["derive"] }
prost = "0.12"
prost-types = "0.12"
syn = { version = "*", features = ["full"] }
quote = "*"
proc-macro2 = "*"
thiserror = "1.0"
sqlx = { version = "0.7", features = [ 
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "chrono",
  "migrate",
  "json",
  "uuid"
  ]}
trait-variant = "0.1.1"


# ------------------
#    crypto libs
# ------------------
rand = "0.8"
rust-argon2 = "2"
ring = "0.17"
sha2 = "0.10"
themis = "0.14.0"
secp256k1 = { version = "0.28", features = ["rand"] }
tiny-keccak = "2"
rand_chacha = "0.3"
chacha20 = "0.9"
web3 = "0.19"
wallexerr = "0.3.2"
base64 = "0.22"
base58 = "0.2.0"
sha3 = "0.10.8"
aes256ctr_poly1305aes = "0.2.0"
# ------------------


[lib]
# libraries don't have entry points, you can't run them,they're used for functionality sharing like binding a .wasm into js codes
# we need lib.rs and crate type of cdylib for none binary like .wasm, .so, .dylib and .dll files or for tests
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
name = "utils"

[[bin]]
name = "zoomate"
path = "src/node.rs"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = true # panic on any overflow

[build-dependencies]
tonic-build = "0.10.2"
